fix error in calculating mean and std

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "2c50229a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "03a8cdcb",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "030be969",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "7dcf689e",
    "metadata": {},
    "outputs": [
@@ -62,10 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9c690166",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.shape = torch.Size([60000, 1, 28, 28])\n",
+      "current_mean = 0.4999999701976776\n",
+      "current_std = 0.4999999701976776\n"
+     ]
+    }
+   ],
    "source": [
     "target_mean = 0.5\n",
     "target_std = 0.5\n",
@@ -87,12 +97,13 @@
     "\n",
     "# test statistics\n",
     "statistics_test_loader = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
-    "data = next(iter(initial_loader))[0] # gets the normalized entire dataset\n",
+    "statistics_test_loader = torch.utils.data.DataLoader(statistics_test_loader, batch_size=len(statistics_test_loader))\n",
+    "data = next(iter(statistics_test_loader))[0] # gets the normalized entire dataset\n",
     "current_mean = data.mean().item()\n",
     "current_std = data.std().item()\n",
     "print(f\"{data.shape = }\")\n",
-    "print(f\"{current_mean = }\")\n",
-    "print(f\"{current_std = }\")"
+    "print(f\"{current_mean = }\") # confirm mean ~0.5\n",
+    "print(f\"{current_std = }\")  # confirm std  ~0.5"
    ]
   },
   {
@@ -126,122 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "86bf8f59",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Images shape: torch.Size([64, 1, 28, 28])\n",
-      "Labels shape: torch.Size([64])\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "from torchvision import datasets, transforms\n",
-    "\n",
-    "# Define a transform to normalize the data\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),  # Convert images to PyTorch tensors\n",
-    "    transforms.Normalize((0.5,), (0.5,)),  # Modified normalization parameters\n",
-    "])\n",
-    "\n",
-    "# Load the training and test datasets\n",
-    "train_dataset = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
-    "test_dataset = datasets.MNIST(root='./data', train=False, transform=transform, download=True)\n",
-    "\n",
-    "# Wrap datasets in DataLoader for batching and shuffling\n",
-    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=64, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=64, shuffle=False)\n",
-    "\n",
-    "# Example: Check a batch of data\n",
-    "data_iter = iter(train_loader)\n",
-    "images, labels = next(data_iter)\n",
-    "\n",
-    "print(f\"Images shape: {images.shape}\")\n",
-    "print(f\"Labels shape: {labels.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "32d2a30c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.7445)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "9b9d91c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
-    "b = datasets.MNIST(root='./data', train=False, transform=transform, download=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "d4ee2839",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_loader = torch.utils.data.DataLoader(dataset=a, batch_size=64, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(dataset=b, batch_size=64, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "63015b22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_iter = iter(train_loader)\n",
-    "images, labels = next(data_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "991f68c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1248)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((images - 0.5)/ 0.5).mean()"
-   ]
   },
   {
    "cell_type": "code",
