--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "2c50229a",
    "metadata": {},
    "outputs": [],
@@ -13,22 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "id": "b6fe31ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants\n",
+    "BATCH_SIZE = 2048\n",
+    "target_mean = 0.5 # for normalizing image data\n",
+    "target_std = 0.5 # for normalizing image data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6f2216",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "03a8cdcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "])\n",
-    "\n",
+    "initial_transform = transforms.Compose([transforms.ToTensor(),])\n",
     "initial_dataset = datasets.MNIST(root='./data', train=True, transform=initial_transform, download=True)\n",
     "initial_loader = torch.utils.data.DataLoader(initial_dataset, batch_size=len(initial_dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "030be969",
    "metadata": {},
    "outputs": [],
@@ -40,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "7dcf689e",
    "metadata": {},
    "outputs": [
@@ -62,8 +80,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "9c690166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform_mean = (current_mean * target_std - target_mean * current_std) / target_std\n",
+    "transform_std = current_std / target_std\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((transform_mean,), (transform_std,)),\n",
+    "])\n",
+    "\n",
+    "train_dataset = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
+    "test_dataset = datasets.MNIST(root='./data', train=False, transform=transform, download=True)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "55b5434e",
    "metadata": {},
    "outputs": [
     {
@@ -77,25 +117,7 @@
     }
    ],
    "source": [
-    "target_mean = 0.5\n",
-    "target_std = 0.5\n",
-    "\n",
-    "transform_mean = (current_mean * target_std - target_mean * current_std) / target_std\n",
-    "transform_std = current_std / target_std\n",
-    "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((transform_mean,), (transform_std,)),\n",
-    "])\n",
-    "\n",
-    "train_dataset = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
-    "test_dataset = datasets.MNIST(root='./data', train=False, transform=transform, download=True)\n",
-    "\n",
-    "# batch size from paper is 2048\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2048, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=2048, shuffle=False)\n",
-    "\n",
-    "# test statistics\n",
+    "# test statistics (make sure mean and median are 0.5 and 0.5)\n",
     "statistics_test_loader = datasets.MNIST(root='./data', train=True, transform=transform, download=True)\n",
     "statistics_test_loader = torch.utils.data.DataLoader(statistics_test_loader, batch_size=len(statistics_test_loader))\n",
     "data = next(iter(statistics_test_loader))[0] # gets the normalized entire dataset\n",
@@ -107,28 +129,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55b5434e",
+   "cell_type": "markdown",
+   "id": "05611f5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Training"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f0454f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a70bfa39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
