outline of encoder/decoder training

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "2c50229a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchvision import datasets, transforms"
+    "from torchvision import datasets, transforms\n",
+    "from torch import nn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b6fe31ee",
+   "id": "10029e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6f2216",
+   "id": "5260a937",
    "metadata": {},
    "source": [
     "## Load data"
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "9c690166",
    "metadata": {},
    "outputs": [],
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "55b5434e",
    "metadata": {},
    "outputs": [
@@ -111,8 +112,8 @@
      "output_type": "stream",
      "text": [
       "data.shape = torch.Size([60000, 1, 28, 28])\n",
-      "current_mean = 0.4999999701976776\n",
-      "current_std = 0.4999999701976776\n"
+      "current_mean = 0.13066047430038452\n",
+      "current_std = 0.30810782313346863\n"
      ]
     }
    ],
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05611f5c",
+   "id": "04818d60",
    "metadata": {},
    "source": [
     "## Training"
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "a70bfa39",
    "metadata": {},
    "outputs": [],
@@ -154,16 +155,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b2dfdfe6",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NeuralNetwork(\n",
+      "  (encoder): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=2048, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=2048, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=32, bias=True)\n",
+      "  )\n",
+      "  (decoder): Sequential(\n",
+      "    (0): Linear(in_features=32, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=2048, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=2048, out_features=784, bias=False)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Linear(28*28, 2048),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(2048, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 32)\n",
+    "        )\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(32, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 2048),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(in_features=2048, out_features=28*28, bias=False),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        encoding = self.encoder(x)\n",
+    "        # TODO: masking\n",
+    "        # TODO: norm loss\n",
+    "        logits = self.decoder(encoding)\n",
+    "        return logits\n",
+    "\n",
+    "model = NeuralNetwork().to(device)\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8d6ca4e2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss_fn = nn.L1Loss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "bcd46a03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(data_loader, loss, optimizer, model, epochs=1):\n",
+    "    model.train()\n",
+    "    \n",
+    "    for batch_idx, data in enumerate(data_loader):\n",
+    "        X, y = data\n",
+    "        X = torch.flatten(X, start_dim=1)\n",
+    "        y_hat = model.forward(X.to(device))\n",
+    "        print(y_hat.shape)\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6ca4e2",
+   "id": "4301f3ed",
    "metadata": {},
    "outputs": [],
    "source": []
