certificates confirmed not working

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "c439089e",
+   "id": "dc4135fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc5a831",
+   "id": "d06fd0c2",
    "metadata": {},
    "source": [
     "## Load data"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519b19f3",
+   "id": "cbb5591d",
    "metadata": {},
    "source": [
     "## Training"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "99d9038c",
+   "id": "029200e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "a713ea48",
+   "id": "f9e4e0d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +325,9 @@
     "            encoding_losses.append(encoding_loss.item())\n",
     "            mae_top_certs_loss.append(mae_top_cert.item())\n",
     "            mae_bottom_certs_loss.append(mae_bottom_cert.item())\n",
-    "\n",
-    "            if batch_idx % 10 == 0:\n",
+    "            \n",
+    "            current_batch = len(data_loader)*epoch + batch_idx\n",
+    "            if current_batch % 1000 == 0:\n",
     "                print(f\"batch #{len(data_loader)*epoch + batch_idx}:\\t {batch_loss:.4}\")\n",
     "                print(f\"decoder:\\t {decoder_mae:.4}\")\n",
     "                print(f\"Top cert loss:\\t {mae_top_cert:.4}\")\n",
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "ed00650e",
+   "id": "7b338a50",
    "metadata": {},
    "outputs": [
     {
@@ -3998,7 +3999,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "3f4dcedb",
+   "id": "24e95469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4008,7 +4009,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "8d9b4349",
+   "id": "6248a83a",
    "metadata": {},
    "outputs": [
     {
@@ -4035,16 +4036,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d994e9ec",
+   "metadata": {},
+   "source": [
+    "## Testing Certificates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e787551e",
+   "execution_count": 306,
+   "id": "618084fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_images_batch, test_labels_batch = next(iter(test_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "61a31963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoding, X_hat, X_hat_top_cert, X_hat_bottom_cert = model.forward(\n",
+    "    torch.flatten(test_images_batch, start_dim=1).to(device),\n",
+    "    test_labels_batch.to(device)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "id": "f708ae69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2048, 784])"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_hat_top_cert.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "527b3dd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_digits = torch.flatten(test_images_batch[test_labels_batch < 4,...], start_dim=1)\n",
+    "high_digits = torch.flatten(test_images_batch[test_labels_batch > 4,...], start_dim=1)\n",
+    "bottom_cert_low_digits = X_hat_top_cert[test_labels_batch < 4,:].to('cpu')\n",
+    "bottom_cert_high_digits = X_hat_top_cert[test_labels_batch > 4,:].to('cpu')\n",
+    "low_digits_loss = l1_loss(low_digits, bottom_cert_low_digits)\n",
+    "high_digits_loss = l1_loss(high_digits, bottom_cert_high_digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "id": "12e03b52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.1662, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.1569, grad_fn=<MeanBackward0>))"
+      ]
+     },
+     "execution_count": 324,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "low_digits_loss, high_digits_loss"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "29723e61",
+   "id": "c4bafcbd",
    "metadata": {},
    "source": [
     "## Saving Model"
@@ -4053,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "dc274202",
+   "id": "e1288007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4067,7 +4149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c52d232",
+   "id": "8a7b7e01",
    "metadata": {},
    "source": [
     "## Generating Image Samples"
@@ -4076,7 +4158,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "5647d0f4",
+   "id": "e178fc95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4086,7 +4168,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "664e1363",
+   "id": "515fe0fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4181,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "541dca61",
+   "id": "69ace300",
    "metadata": {},
    "outputs": [
     {
@@ -4120,7 +4202,7 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "c2ee9d2d",
+   "id": "d42aea0e",
    "metadata": {},
    "outputs": [
     {
@@ -4141,7 +4223,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "0b35626d",
+   "id": "a7b5a616",
    "metadata": {},
    "outputs": [
     {
@@ -4173,7 +4255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e19d13",
+   "id": "cbc19aa0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4181,7 +4263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8f897f",
+   "id": "df8f0821",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4189,7 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbec3213",
+   "id": "1afa39a1",
    "metadata": {},
    "outputs": [],
    "source": []
