use torch attacks instead of foolbox

--- a/adversarial_examples/main.ipynb
+++ b/adversarial_examples/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "a5161b7f-aa9a-45ab-b851-e24ddcad28cd",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,23 @@
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torchattacks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "df30f3fe-08e5-4623-8cbc-dfe3c460aa66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test, y_test = load_cifar10(n_examples=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "44bd89ac-f87c-4d9e-9883-3f804433ffd2",
    "metadata": {},
    "outputs": [],
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "28c6d81a-dd3f-4ac0-b467-3337c369fef7",
    "metadata": {},
    "outputs": [],
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "51427993-fd30-4571-84bf-0d6606a223d0",
    "metadata": {},
    "outputs": [
@@ -377,85 +388,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "6498f9ae-dea5-4b37-a259-ce2145e731f5",
+   "execution_count": 20,
+   "id": "800eef26-2ecd-4de6-bd08-eefb4e5fb666",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model device: cpu\n",
-      "Robust accuracy: 0.0%\n"
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 88.28%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 89.84%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 91.41%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 93.75%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 89.06%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 87.50%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 92.97%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 80.47%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 87.50%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 89.84%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 89.06%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 90.62%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 87.50%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 93.75%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 90.62%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 95.31%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 91.41%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 86.72%\n",
+      "mps:0\n",
+      "mps:0\n",
+      "Attack success rate: 86.72%\n",
+      "mps:0\n",
+      "mps:0\n"
      ]
-    }
-   ],
-   "source": [
-    "import foolbox as fb\n",
-    "import torch\n",
-    "import torchvision.transforms as transforms\n",
-    "\n",
-    "# First, make sure your PyTorch model is on the correct device\n",
-    "device = torch.device('cpu')\n",
-    "model = model.to(device)\n",
-    "\n",
-    "# Verify the model is actually on MPS\n",
-    "print(f\"Model device: {next(model.parameters()).device}\")\n",
-    "\n",
-    "# Create Foolbox model with preprocessing - convert mean/std to tensors on the same device\n",
-    "preprocessing = {\n",
-    "    'mean': torch.tensor([0.485, 0.456, 0.406]).to(device),\n",
-    "    'std': torch.tensor([0.229, 0.224, 0.225]).to(device),\n",
-    "    'axis': -3\n",
-    "}\n",
-    "\n",
-    "# Create the Foolbox model\n",
-    "fmodel = fb.PyTorchModel(model, bounds=(0, 1), preprocessing=preprocessing)\n",
-    "\n",
-    "# Make sure your test data is on the same device\n",
-    "x_test = x_test.to(device)\n",
-    "y_test = y_test.to(device)\n",
-    "\n",
-    "# # Run attack\n",
-    "# _, advs, success = fb.attacks.LinfPGD()(fmodel, x_test, y_test, epsilons=[8/255])\n",
-    "# print('Robust accuracy: {:.1%}'.format(1 - success.float().mean()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "ede35d8a-c8ce-4ada-bedd-d19f3200bb30",
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Robust accuracy: 0.0%\n",
-      "Robust accuracy: 0.0%\n",
-      "Robust accuracy: 100.0%\n"
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x107e50720>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1663, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1627, in _shutdown_workers\n",
+      "    w.join(timeout=_utils.MP_STATUS_CHECK_INTERVAL)\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/multiprocessing/process.py\", line 149, in join\n",
+      "    res = self._popen.wait(timeout)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/multiprocessing/popen_fork.py\", line 40, in wait\n",
+      "    if not wait([self.sentinel], timeout):\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/multiprocessing/connection.py\", line 948, in wait\n",
+      "    ready = selector.select(timeout)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/zephaniahroe/anaconda3/envs/robustbench-env/lib/python3.11/selectors.py\", line 415, in select\n",
+      "    fd_event_list = self._selector.poll(timeout)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 29\u001b[39m\n\u001b[32m     26\u001b[39m     \u001b[38;5;28mprint\u001b[39m(predicted.device)\n\u001b[32m     28\u001b[39m success_rate = (predicted != labels).float().mean()\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mAttack success rate: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuccess_rate\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/robustbench-env/lib/python3.11/site-packages/torch/_tensor.py:1128\u001b[39m, in \u001b[36mTensor.__format__\u001b[39m\u001b[34m(self, format_spec)\u001b[39m\n\u001b[32m   1126\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(Tensor.\u001b[34m__format__\u001b[39m, (\u001b[38;5;28mself\u001b[39m,), \u001b[38;5;28mself\u001b[39m, format_spec)\n\u001b[32m   1127\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.dim() == \u001b[32m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.is_meta \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m Tensor:\n\u001b[32m-> \u001b[39m\u001b[32m1128\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.item().\u001b[34m__format__\u001b[39m(format_spec)\n\u001b[32m   1129\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mobject\u001b[39m.\u001b[34m__format__\u001b[39m(\u001b[38;5;28mself\u001b[39m, format_spec)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "x_test, y_test = load_cifar10(n_examples=1)\n",
     "\n",
-    "attacks = [\n",
-    "    fb.attacks.FGSM(),\n",
-    "    fb.attacks.PGD(),\n",
-    "    fb.attacks.L2CarliniWagnerAttack()\n",
-    "]\n",
     "\n",
-    "# Run attacks\n",
-    "for attack in attacks:\n",
-    "    _, advs, success = attack(fmodel,  x_test, y_test, epsilons=[8/255])\n",
-    "    print('Robust accuracy: {:.1%}'.format(1 - success.float().mean()))"
+    "# Simple setup - no complex preprocessing nonsense\n",
+    "model = model.to('mps')\n",
+    "model.eval()\n",
+    "device = 'mps'\n",
+    "\n",
+    "# Create attacks\n",
+    "fgsm = torchattacks.FGSM(model, eps=8/255)\n",
+    "pgd = torchattacks.PGD(model, eps=8/255, alpha=2/255, steps=10)\n",
+    "cw = torchattacks.CW(model, c=1, kappa=0, steps=50)\n",
+    "autoattack = torchattacks.AutoAttack(model, eps=8/255)\n",
+    "\n",
+    "# Use your normal data loader (with whatever preprocessing your model expects)\n",
+    "for images, labels in trainloader:\n",
+    "    images, labels = images.to(device), labels.to(device)\n",
+    "    \n",
+    "    # Generate adversarial examples\n",
+    "    adv_images = pgd(images, labels)\n",
+    "    \n",
+    "    # Evaluate\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(adv_images.to(device))\n",
+    "        print(outputs.device)\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        print(predicted.device)\n",
+    "        \n",
+    "    success_rate = (predicted != labels).float().mean()\n",
+    "    print(f'Attack success rate: {success_rate:.2%}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6453f7-58f2-4046-bb5f-3626eac13885",
+   "id": "5c14883d-682e-4950-97b2-4cc13cfab6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11cf2c31-b1fe-47ec-8872-ce4de140630f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae85c187-195e-4ab8-8075-54dc1eee1917",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ace4a7-f008-4b3e-8c37-221691013095",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a97dc0d5-7b53-46c2-9221-400db932d163",
    "metadata": {},
    "outputs": [],
    "source": []
